# imu_fusion_ros

./: .gitmodules  Dockerfile.ros2  README.md  docker-compose.yaml  ros_entrypoint.sh
imu_fusion_ros/: CMakeLists.txt  package.xml
imu_fusion_ros/config/: calibration.yaml
imu_fusion_ros/launch/: imu_fusion.launch.py
imu_fusion_ros/src/: imu_fusion_node.cpp
imu_fusion_ros/srv/: TriggerCalibration.srv
imu_fusion_ros_interface/: CMakeLists.txt  package.xml
imu_fusion_ros_interface/srv/: CalibrationTrigger.srv
