<?xml version="1.0"?>
<package format="3">
  <name>imu_fusion_ros</name>
  <version>0.0.1</version>
  <description>ROS 2 Humble package for IMU sensor fusion using xioTechnologies/Fusion.</description>

  <maintainer email="you@yourdomain.tld">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>
  <depend>imu_fusion_ros_interface</depend> <!-- For the calibration service definition -->

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
